@@ -7,11 +7,11 @@ if [ ! -d psddldata/data/ ]; then
     exit 1
 fi
 
-packages=`(cd psddldata/data; ls -1 *.ddl.xml | cut -d. -f1 | grep -v xtc)`
+packages=`(cd psddldata/data; ls -1 *.ddl | cut -d. -f1 | grep -v xtc)`
 
 for pkg in $packages; do 
-    f="psddldata/data/$pkg.ddl.xml" 
-    h5schema="psddl_hdf2psana/data/$pkg-h5.ddl.xml"
+    f="psddldata/data/$pkg.ddl" 
+    h5schema="psddl_hdf2psana/data/$pkg-h5.ddl"
     test -f "$h5schema" || h5schema=
     psddlc -b hdf5 -I data -E psddl_hdf2psana/include -O psddl_hdf2psana/src -i psddl_hdf2psana -t psddl_hdf2psana \
         -B psana-inc:psddl_psana -B psana-ns:Psana "$@" $f $h5schema
@@ -19,8 +19,8 @@ done
 
 files=""
 for pkg in $packages; do 
-    files="$files psddldata/data/$pkg.ddl.xml"
-    h5schema="psddl_hdf2psana/data/$pkg-h5.ddl.xml"
+    files="$files psddldata/data/$pkg.ddl"
+    h5schema="psddl_hdf2psana/data/$pkg-h5.ddl"
     test -f "$h5schema" && files="$files $h5schema" 
 done
 psddlc -b hdf5-dispatch -I data -e psddl_hdf2psana/include/dispatch.h -o psddl_hdf2psana/src/dispatch.cpp \
